Punto 5: Juan Caballero - corrección reportes pdf y excel